# e-snort

./: .gitignore  Makefile.am  README.md  configure.ac
config/: Doxyfile.in  bootstrap  getGitInfo.sh
include/: esnort.hpp  grill.hpp  qcd.hpp
include/assign/: assignBase.hpp  assignDeviceToDevice.hpp  assignDeviceToHost.hpp  assignHostToDevice.hpp  assignHostToHost.hpp
include/cuda/: cuda.hpp
include/debug/: attachDebugger.hpp  attachDebuggerGlobalVariablesDeclarations.hpp  backtracing.hpp  crash.hpp  demangle.hpp  gdbAttach.hpp  gdbAttachExternalVariables.hpp  gdbAttachGlobalVariablesDeclarations.hpp  minimalCrash.hpp  signalTrap.hpp
include/expr/: assignerFactory.hpp  baseComp.hpp  baseTens.hpp  bindComps.hpp  comp.hpp  compLoops.hpp  compRwCl.hpp  comps.hpp  conj.hpp  dagger.hpp  deviceAssign.hpp  directAssign.hpp  dynamicCompsProvider.hpp  dynamicTens.hpp  dynamicTensDeclaration.hpp  dynamicTensDefinition.hpp  executionSpace.hpp  expr.hpp  exprDeclaration.hpp  exprRefOrVal.hpp  indexComputer.hpp  prod.hpp  prodCompsDeducer.hpp  simdAssign.hpp  simdifiableComp.hpp  stackTens.hpp  subExprs.hpp  tensRef.hpp  threadAssign.hpp  transp.hpp  transposableComp.hpp
include/expr/assign/: assignerFactory.hpp  deviceAssign.hpp  directAssign.hpp  executionSpace.hpp  simdAssign.hpp  threadAssign.hpp
include/expr/comps/: baseComp.hpp  comp.hpp  compLoops.hpp  compRwCl.hpp  comps.hpp  dynamicCompsProvider.hpp  indexComputer.hpp  prodCompsDeducer.hpp  tracerCompsDeducer.hpp  transposableComp.hpp
include/expr/nodes/: algebricSum.hpp  baseTens.hpp  bindComps.hpp  cWiseCombine.hpp  conj.hpp  dynamicTens.hpp  dynamicTensDeclaration.hpp  expr.hpp  exprDeclaration.hpp  node.hpp  nodeCloser.hpp  nodeDeclaration.hpp  prod.hpp  producerDeclaration.hpp  scalar.hpp  shift.hpp  stackTens.hpp  subNodes.hpp  sum.hpp  tens.hpp  tensRef.hpp  trace.hpp  transp.hpp
include/expr/operations/: dagger.hpp  reduce.hpp
include/grill/: grill.hpp  grillade.hpp  universe.hpp
include/ios/: file.hpp  logger.hpp  loggerExternalVariables.hpp  loggerGlobalVariablesDeclarations.hpp  minimalLogger.hpp  scopeFormatter.hpp  textFormat.hpp
include/lattice/: field.hpp  fieldCompsProvider.hpp  fieldDeclaration.hpp  fieldLayoutGetter.hpp  fieldParity.hpp  lattice.hpp  latticeCoverage.hpp  latticeCoverageGetter.hpp  latticeGetter.hpp  parityProvider.hpp  universe.hpp
include/metaprogramming/: arithmeticOperatorsViaCast.hpp  arithmeticTraits.hpp  asConstexpr.hpp  call.hpp  constnessChanger.hpp  crtp.hpp  detectableAs.hpp  feature.hpp  forEachInTuple.hpp  globalVariableProvider.hpp  hasMember.hpp  hiddenVariableProvider.hpp  hiddenVariableProviderTail.hpp  inline.hpp  nonConstMethod.hpp  operatorExists.hpp  refOrVal.hpp  singleInstance.hpp  staticMemberWithInitializator.hpp  templateEnabler.hpp  typeConversion.hpp  universalReference.hpp  unrolledFor.hpp
include/resources/: Mpi.hpp  MpiHiddenVariables.hpp  SIMD.hpp  aliver.hpp  aliverGlobalVariablesDeclarations.hpp  device.hpp  deviceGlobalVariablesDeclarations.hpp  deviceHiddenVariablesDeclarations.hpp  environmentFlags.hpp  mathOperations.hpp  memory.hpp  memoryGlobalVariablesDeclarations.hpp  memoryManager.hpp  memoryManagerGlobalVariablesDeclarations.hpp  refProxy.hpp  scopeDoer.hpp  selfop.hpp  threads.hpp  threadsHiddenVariablesDeclarations.hpp  timer.hpp  timerGlobalVariablesDeclarations.hpp  valueWithExtreme.hpp
include/serialize/: binarize.hpp
include/system/: Mpi.hpp  MpiHiddenVariables.hpp  aliver.hpp  aliverGlobalVariablesDeclarations.hpp  timer.hpp  timerGlobalVariablesDeclarations.hpp
include/tensor/: dynamicVariable.hpp  stackedVariable.hpp  tensorRef.hpp  variableExecSpaceChanger.hpp
include/tuples/: tupleCat.hpp  tupleCommonTypes.hpp  tupleDiscriminate.hpp  tupleExecForAllTypes.hpp  tupleFilter.hpp  tupleFirstOccurrence.hpp  tupleHasType.hpp  tupleReplaceType.hpp  tupleSubset.hpp  uniqueTuple.hpp  uniqueTupleFromTuple.hpp
lib/: Makefile.am  esnort.cpp  grill.cpp
lib/debug/: attachDebugger.cpp  backtracing.cpp  demangle.cpp  gdbAttach.cpp  minimalCrash.cpp  signalTrap.cpp
lib/ios/: minimalLogger.cpp
lib/resources/: Mpi.cpp  aliver.cpp  device.cpp  environmentFlags.cpp  gitInfo.hpp  globalVariablesDefinitions.cpp  memory.cpp  threads.cpp
lib/system/: Mpi.cpp  aliver.cpp
m4/: ax_fma.m4  ax_openmp.m4  ax_simd_type.m4  m4_ax_check_x86_features.m4
src/: Makefile.am  esnort.hpp  main.cpp  smallTest.cpp  testExecutionSpace.cpp  testRefTransfer.cpp
src/assign/: assign.hpp  assignBase.hpp  assignDeviceToDevice.hpp  assignDeviceToHost.hpp  assignHostToDevice.hpp  assignHostToHost.hpp
src/cuda/: cuda.hpp
src/expr/: executionSpace.hpp  expr.hpp
src/metaprogramming/: crtp.hpp  inline.hpp  nonConstMethod.hpp  refOrVal.hpp
src/resources/: memory.hpp  refProxy.hpp  selfop.hpp  value_with_extreme.hpp
src/tensor/: dynamicVariable.hpp  stackedVariable.hpp  tensorRef.hpp  variableExecSpaceChanger.hpp
